@@ -6,3 +6,4 @@ V5_add_updated_case_column.sql
 V6_add_supported_dialects.sql
 V7_add_contact_reasons.sql
 V8_change_device_location_id_type.sql
+V9_add_call_failed_case_column.sql
